# open-monuments-core

./: MANIFEST.in  README.md  hooks.py  package.json  pyproject.toml  setup.py
core/: tasks.py
core/doctype/abonnement/: abonnement.json  abonnement.py
core/doctype/bouwdeel/: bouwdeel.json
core/doctype/complex/: complex.json
core/doctype/eigenaar/: eigenaar.json  eigenaar.py
core/doctype/element/: element.json  element.py
core/doctype/monument/: monument.json
monuments_core/: hooks.py  modules.txt  tasks.py
monuments_core/config/: desktop.py
monuments_core/doctype/abonnement/: abonnement.json
monuments_core/doctype/monument/: monument.json  monument.py
monuments_core/monuments_core/doctype/bouwdeel/: bouwdeel.json  bouwdeel.py
monuments_core/monuments_core/doctype/complex/: complex.json  complex.py
monuments_core/monuments_core/doctype/eigenaar/: eigenaar.json
monuments_core/monuments_core/doctype/element/: element.json
monuments_core/monuments_core/doctype/erm_gebrek/: erm_gebrek.json
monuments_core/monuments_core/doctype/ermgebrek/: ermgebrek.json  ermgebrek.py
monuments_core/monuments_core/doctype/monument/: monument.json  monument.py
