[project]
name = "monuments_core"
authors = [
    {name = "OpenAEC Foundation", email = "info@openaec.org"}
]
description = "Open-Monuments Core — Monumentenregister Frappe-app"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
